# reindeer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: static.yml
assets/shaders/opengl/: basic.frag.glsl  basic.vert.glsl  phong_light_object.frag.glsl  phong_light_object.vert.glsl  uniform_color.frag.glsl  uniform_color.vert.glsl
assets/shaders/webgl/: basic.frag.glsl  basic.vert.glsl  phong_light_object.frag.glsl  phong_light_object.vert.glsl  uniform_color.frag.glsl  uniform_color.vert.glsl
docs/wasm/: reindeer.d.ts  reindeer.js  reindeer_bg.wasm  reindeer_bg.wasm.d.ts
examples/: hello_world.rs  native.rs
public/: index.html  index.js  package-lock.json  package.json  webpack.config.js
scripts/: build_wasm.sh  build_wasm_local.sh  clean.sh  run_wasm.sh
src/: backend.rs  common.rs  entity.rs  lib.rs  main.rs  math.rs  renderer.rs  scene.rs  shader.rs  vertex.rs
src/opengl/: mod.rs  shader.rs
src/renderer/: entity.rs  opengl.rs  types.rs  vertex_attribute.rs  webgl.rs
src/renderer/opengl/: mod.rs  shader.rs
src/renderer/opengl/shaders/: basic.frag.glsl  basic.vert.glsl
src/renderer/webgl/: mod.rs  shader.rs
src/renderer/webgl/shaders/: basic.frag.glsl  basic.vert.glsl
src/webgl/: mod.rs  shader.rs
