[package]
name = "reindeer"
version = "0.1.0"
edition = "2021"

[features]
webgl = ["dep:js-sys", "dep:wasm-bindgen", "dep:web-sys"]
opengl = ["dep:gl", "dep:glfw"]

[dependencies]
lazy_static = "1.4.0"
include_dir = "0.7.3"
js-sys ={ version = "0.3.60", optional = true }
wasm-bindgen ={ version = "0.2.83", optional = true }
gl = { version = "0.14.0", optional = true }
glfw = { git = "https://github.com/bjz/glfw-rs.git", optional = true }

[dependencies.web-sys]
version = "0.3.60"
optional = true
features = [
  'Document',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'console'
]
